--- a/style1.css
+++ b/style1.css
@@ -174,5 +174,10 @@ padding: 20px;
 height: fit-content;
 }
 
-div:hover div:active{
+.yellow{
+    color: yellow;
+}
+
+.green{
+    color: green;
 }
